Thu Mar  9 22:29:14 GMT 2000
	
	* app/gimpimage.c

	A tattoos state can equal the highest tattoo in the image.

Thu Mar  9 20:45:13 CET 2000  Sven Neumann <sven@gimp.org>

	* app/commands.[ch]
	* app/menus.c: moved Undo History into the Dialogs menu. The View 
	menu should only hold stuff affecting the view of an image.

Thu Mar  9 12:51:21 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* plug-ins/gap/gap_decode_xanim.c
	* plug-ins/gap/gap_mov_dialog.c
	* plug-ins/xjt/xjt.c
	* plug-ins/common/uniteditor.c: Typo fixes.

Thu Mar  9 14:00:55 CET 2000  Sven Neumann <sven@gimp.org>

	* app/color_picker.c: for indexed images set Index in the info_window
	to N/A if sample_merged or sample_average is active.

Thu Mar  9 12:44:55 CET 2000  Sven Neumann <sven@gimp.org>

	* app/gimpdrawable.c: gimp_drawable_get_color_at() now silently
	returns NULL again if the coordinates are out of range. A lot of 
	code using this function relies on this feature and correctly 
	checks the return value. No need to emit critical warnings here.
	
	The GTK_CHECK_TYPE macro test for obj != NULL, no need to do this
	check twice. Removed lots of unnecessary calls to g_return_if_fail().

	* app/color_picker.c: with the old behaviour of 
	gimp_drawable_get_color_at() the code is a bit simpler.

	* app/fuzzy_select.c: fuzzy_select relied on drawable_offsets()
	returning off_x = off_y = 0 if drawable == NULL. Decided to change
	this here, fixes bug #7077.

	* app/gimpimage.[ch]: Even though we made bad experiences with the 
	changes in gimpdrawable.c, I have introduced similar argument checks
	here.
	
	* app/image_map.c: indentation

Wed Mar  8 23:37:38 CET 2000  Sven Neumann <sven@gimp.org>

	* app/menus.c: Oops, my last commit broke LANG=C. This is now fixed.

Wed Mar  8 21:52:51 CET 2000  Sven Neumann <sven@gimp.org>

	* app/menus.c: applied and heavily modified a patch from Daniel Egger.

	There's not any more the need to declare menu branches unless we